<resources>
    <string name="app_name">e Chit Organizer</string>
    <string name="money_content_description">Money Gif</string>
    <string name="name">Name</string>
    <string name="area">Area</string>
    <string name="locality">Locality</string>
    <string name="pending">Pending</string>
    <string name="to_pay">To Pay</string>
    <string name="bid_amount">Bid Amount</string>
    <string name="address">Address</string>
    <string name="indian_currency_symbol">₹</string>
    <string name="personal_info">Personal Information</string>
    <string name="bank_info">Bank Information(Optional)</string>
    <string name="bank_name">Bank Name</string>
    <string name="branch">Branch Name</string>
    <string name="acc_num">Account Number</string>
    <string name="ifsc">IFSC Code</string>
    <string name="next">Next➔</string>
    <string name="add_button">Add button</string>
    <string name="add_seetu">Add Seetu</string>
    <string name="add_user">Add User</string>
    <string name="add_month">Add Month</string>
    <string name="all_chits">All Chits</string>
    <string name="amount">Amount</string>
    <string name="months">Months</string>
    <string name="month">Month</string>
    <string name="sample_text">Sample Text</string>
    <string name="contact">Contact</string>
    <string name="phone">Phone</string>
    <string name="beet">Beet</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="new_chit">New Chit</string>
    <string name="new_user">New User</string>
    <string name="new_month">New Month</string>
    <string name="amount_received">Amount Received</string>
    <string name="dialer_button">Dialer Button</string>
    <string name="edit_month">Edit Month</string>
    <string name="edit_bank_details">Edit bank details</string>
    <string name="sign_out">Sign Out</string>
    <string name="chit">Chit</string>
    <string name="profile">Profile</string>
    <string name="year">Year</string>
    <string name="all_users">All Users</string>
    <string name="users">Users</string>
    <string name="starting_year">Starting year</string>
    <string name="hello_blank_fragment">hello</string>
    <string name="delete">Delete</string>
    <string name="update_available">Update Available</string>
    <string name="update">Update</string>
    <string name="edit">Edit</string>
</resources>